# aGate

./: .gitignore  CMakeLists.txt  README.md
concept/: aGain.py  pyvenv.cfg
include/: AGateProcessor.hh
src/: AGateProcessor.cc
